test/good/automatic/base/without_input/ret_zero/0059.lat
// lazy evaluation or

boolean dontTouchThis() {
  error();
}

int main() {
  boolean b = true;
  if(b || dontTouchThis())
    printString("OK");
  return 0;
}
