test/bad/automatic/base/compile_time/0020.lat
int main() {
  if ("true" == true) {
   printString("foo");
  }
  return 0 ;
}